--- a/tools/eureka-server/src/main/resources/bootstrap.yml
+++ b/tools/eureka-server/src/main/resources/bootstrap.yml
@@ -55,3 +55,13 @@ spring:
       uri: ${CONFIG_SERVER_URL:http://localhost:8888}
       label: master
       fail-fast: true
+
+
+---
+spring:
+  profiles: dev
+  cloud:
+    config:
+      uri: ${CONFIG_SERVER_URL:http://localhost:8888}
+      label: master
+      fail-fast: true
