--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ subprojects {
     apply plugin: 'java'
     apply plugin: "idea"
     apply plugin: "org.springframework.boot"
+    apply plugin: 'io.spring.dependency-management'
 
     group = 'ofedorova'
     version = '0.0.1'
@@ -25,14 +26,23 @@ subprojects {
         mavenCentral()
     }
 
-    dependencies {
-        compile("org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}")
-        runtime("org.springframework.boot:spring-boot-devtools:${springBootVersion}")
-        testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
+    dependencyManagement {
+        imports {
+            mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Edgware.SR3'
+            mavenBom 'de.codecentric:spring-boot-admin-dependencies:1.5.7'
+        }
     }
 
-    ext {
-        springCloudVersion = '1.4.2.RELEASE'
+    dependencies {
+        compile("org.springframework.boot:spring-boot-starter-actuator")
+        runtime("org.springframework.boot:spring-boot-devtools")
+        testCompile("org.springframework.boot:spring-boot-starter-test")
+
+        compile 'org.jolokia:jolokia-core:1.3.7'
+        compile 'org.projectlombok:lombok:1.16.20'
+        compile 'net.logstash.logback:logstash-logback-encoder:4.8'
     }
+
+
 }
 
