--- a/tools/eureka-server/build.gradle
+++ b/tools/eureka-server/build.gradle
@@ -4,3 +4,5 @@ dependencies {
 	compile ("org.springframework.cloud:spring-cloud-starter-config")
 }
 
+apply plugin: 'application'
+mainClassName = 'ofedorova.EurekaServerApplication'
