Admin server + turbine

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     compile 'org.springframework.cloud:spring-cloud-starter-feign'
+    compile 'org.springframework.cloud:spring-cloud-starter-hystrix'
 }
 
 bootRepackage.enabled = false
