--- a/build.gradle
+++ b/build.gradle
@@ -38,8 +38,8 @@ subprojects {
         runtime("org.springframework.boot:spring-boot-devtools")
         testCompile("org.springframework.boot:spring-boot-starter-test")
 
-        compile 'org.jolokia:jolokia-core:1.3.7'
-        compile 'org.projectlombok:lombok:1.16.20'
+        compile 'org.jolokia:jolokia-core'
+        compile 'org.projectlombok:lombok'
         compile 'net.logstash.logback:logstash-logback-encoder:4.8'
     }
 
