--- a/tools/admin-server/build.gradle
+++ b/tools/admin-server/build.gradle
@@ -1,9 +1,9 @@
 dependencies {
     compile 'org.springframework.cloud:spring-cloud-starter-eureka'
     compile 'org.springframework.cloud:spring-cloud-starter-config'
-    compile "de.codecentric:spring-boot-admin-server"
-    compile "de.codecentric:spring-boot-admin-server-ui"
-    compile "de.codecentric:spring-boot-admin-server-ui-hystrix"
+    compile 'org.springframework.cloud:spring-cloud-starter-turbine'
+    compile 'de.codecentric:spring-boot-admin-starter-server'
+    compile 'de.codecentric:spring-boot-admin-server-ui-turbine'
     compile "de.codecentric:spring-boot-admin-server-ui-activiti"
 }
 
