Timeout for long operation

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ rootProject.name = 'spring-cloud-demo'
 include 'common'
 include 'account-service'
 include 'hello-service'
+include 'hello-long-service'
 include 'log-config'
 include 'tools'
 include 'tools:admin-server'
